--- a/nems/templates/components/head.html
+++ b/nems/templates/components/head.html
@@ -1,14 +1,5 @@
-<title>NEtworking and Mobile Systems (NEMS) Lab - 網路和行動系統實驗室</title>
+<title>
+	NEtworking and Mobile Systems (NEMS) Lab - 網路和行動系統實驗室
+</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
-<!-- css -->
-{% load staticfiles %}
-<link rel="stylesheet" href="{% static "css/w3.css" %}">
-<link rel="stylesheet" href="{% static "css/layout.css"%}">
-<link rel="stylesheet" href="{% static "css/font-awesome.min.css"%}">
-<link rel="stylesheet" href="{% static "css/layout.css"%}">
-<style>
-	.mySlides {display:none}
-	.w3-left, .w3-right, .w3-badge {cursor:pointer}
-	.w3-badge {height:13px;width:13px;padding:0}
-</style>
+{% include 'resources/style' %}
