--- a/nems/templates/components/navbar.html
+++ b/nems/templates/components/navbar.html
@@ -3,14 +3,14 @@
 	<!--中小螢幕左邊選單-->
 	<nav class="w3-sidenav w3-white w3-card-2" style="display:none; right:0; z-index: 10000;" id="mySidenav">
 		<a href="javascript:void(0)" onclick="w3_close()" class="w3-closenav w3-large">Close &times;</a>
-		<a href="index.html" class="w3-padding-large">Home</a>
-		<a href="projects.html" class="w3-padding-large ">Projects</a>
-		<a href="publications.html" class="w3-padding-large ">Publications</a>
-		<a href="peoples.html" class="w3-padding-large ">People</a>
-		<a href="links.html" class="w3-padding-large ">Links</a>
-		<a href="gallery.html" class="w3-padding-large ">Gallery</a>
-		<a href="download.html" class="w3-padding-large ">Download</a>
-		<a href="demo.html" class="w3-padding-large ">Demo</a>
+		<a href="index" class="w3-padding-large">Home</a>
+		<a href="projects" class="w3-padding-large">Projects</a>
+		<a href="publications" class="w3-padding-large">Publications</a>
+		<a href="people" class="w3-padding-large">People</a>
+		<a href="links" class="w3-padding-large">Links</a>
+		<a href="gallery" class="w3-padding-large">Gallery</a>
+		<a href="download" class="w3-padding-large">Download</a>
+		<a href="demo" class="w3-padding-large">Demo</a>
 	</nav>
 	<!--Header-->
 	<header class="w3-container w3-black">
@@ -19,7 +19,7 @@
 			<span class="w3-opennav w3-xlarge w3-hide-large w3-opennav w3-right" onclick="w3_open()">&#9776;</span>
 			<!--logo及名稱-->
 			<h1 class="w3-xxlarge w3-margin-0 w3-margin-top" style="line-height: 1.2;">
-				<a href="index.html">
+				<a href="index">
 					{% load staticfiles %}
 					<img src="{% static "img/logo.png"%}" alt="NEMS lab logo" id="nemsLabLogo" class="w3-image w3-left w3-hide-small" width=100/>
 					<img src="{% static "img/logo.png"%}" alt="NEMS lab logo" id="nemsLabLogo" class="w3-image w3-left w3-hide-medium w3-hide-large" width=70/>
@@ -42,14 +42,14 @@
 	<!--主選單-->
 	<div id="myNavbarContainer" class="w3-blue w3-card-2 w3-hide-medium w3-hide-small">
 		<ul id="myNavbar" class="w3-navbar w3-blue w3-hide-medium w3-hide-small w3-content" >
-			<li class="w3-hide-small"><a href="index.html" class="w3-padding-large">Home</a></li>
-			<li class="w3-hide-small"><a href="projects.html" class="w3-padding-large ">Projects</a></li>
-			<li class="w3-hide-small"><a href="publications.html" class="w3-padding-large ">Publications</a></li>
-			<li class="w3-hide-small"><a href="peoples.html" class="w3-padding-large ">People</a></li>
-			<li class="w3-hide-small"><a href="links.html" class="w3-padding-large ">Links</a></li>
-			<li class="w3-hide-small"><a href="gallery.html" class="w3-padding-large ">Gallery</a></li>
-			<li class="w3-hide-small"><a href="download.html" class="w3-padding-large ">Download</a></li>
-			<li class="w3-hide-small"><a href="demo.html" class="w3-padding-large ">Demo</a></li>
+			<li class="w3-hide-small"><a href="index" class="w3-padding-large">Home</a></li>
+			<li class="w3-hide-small"><a href="projects" class="w3-padding-large">Projects</a></li>
+			<li class="w3-hide-small"><a href="publications" class="w3-padding-large">Publications</a></li>
+			<li class="w3-hide-small"><a href="people" class="w3-padding-large">People</a></li>
+			<li class="w3-hide-small"><a href="links" class="w3-padding-large">Links</a></li>
+			<li class="w3-hide-small"><a href="gallery" class="w3-padding-large">Gallery</a></li>
+			<li class="w3-hide-small"><a href="download" class="w3-padding-large">Download</a></li>
+			<li class="w3-hide-small"><a href="demo" class="w3-padding-large">Demo</a></li>
 		</ul>
 	</div>
 </div>
