--- a/nems/templates/index.html
+++ b/nems/templates/index.html
@@ -5,7 +5,8 @@
 	</head>
 
 	<body>
-		{% include 'components/common.html' %}
+		<!-- navbar -->
+		{% include 'components/navbar.html' %}
 
 		<!-- main -->
 		<div id="main-content" class="w3-container w3-content">
@@ -58,7 +59,10 @@
 		  	</div>
 		</div>
 
+		<!-- footer -->
 		{% include 'components/footer.html' %}
-		{% include 'components/script.html' %}
+
+		<!-- javascript -->
+		{% include 'resources/script' %}
 	</body>
 </html>
