--- a/nems/templates/index.html
+++ b/nems/templates/index.html
@@ -63,6 +63,6 @@
 		{% include 'components/footer.html' %}
 
 		<!-- javascript -->
-		{% include 'resources/script' %}
+		{% include 'resources/script.html' %}
 	</body>
 </html>
