--- a/nems/templates/resources/script.html
+++ b/nems/templates/resources/script.html
@@ -5,9 +5,10 @@
 {% load staticfiles %}
 <script src="{% static "js/jquery.1.12.4.min.js"%}"></script>
 <script src="{% static "js/common.js"%}"></script>
+<script src="{% static "js/map.js"%}"></script>
+
+<!--
 <script type="text/javascript">
-	//Google map
-	<!-- Google Map Location -->
 	var myCenter = new google.maps.LatLng(24.7867784,120.9952533);
 
 	function initialize() {
@@ -30,3 +31,4 @@
 
 	google.maps.event.addDomListener(window, 'load', initialize);
 </script>
+-->
