--- a/nems/templates/components/head.html
+++ b/nems/templates/components/head.html
@@ -2,4 +2,4 @@
 	NEtworking and Mobile Systems (NEMS) Lab - 網路和行動系統實驗室
 </title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-{% include 'resources/style' %}
+{% include 'resources/style.html' %}
