--- a/nems/templates/demo.html
+++ b/nems/templates/demo.html
@@ -31,6 +31,6 @@
 		{% include 'components/footer.html' %}
 
 		<!-- javascript -->
-		{% include 'resources/script' %}
+		{% include 'resources/script.html' %}
 	</body>
 </html>
