--- a/nems/templates/gallery.html
+++ b/nems/templates/gallery.html
@@ -33,6 +33,6 @@
 		{% include 'components/footer.html' %}
 
 		<!-- javascript -->
-		{% include 'resources/script' %}
+		{% include 'resources/script.html' %}
 	</body>
 </html>
