--- a/nems/templates/links.html
+++ b/nems/templates/links.html
@@ -29,6 +29,6 @@
 		{% include 'components/footer.html' %}
 
 		<!-- javascript -->
-		{% include 'resources/script' %}
+		{% include 'resources/script.html' %}
 	</body>
 </html>
