--- a/nems/templates/publications.html
+++ b/nems/templates/publications.html
@@ -35,6 +35,6 @@
 		{% include 'components/footer.html' %}
 
 		<!-- javascript -->
-		{% include 'resources/script' %}
+		{% include 'resources/script.html' %}
 	</body>
 </html>
