--- a/nems/templates/gallery.html
+++ b/nems/templates/gallery.html
@@ -13,7 +13,7 @@
 			<div id="gallery"  class="w3-padding-top w3-padding-bottom">
 				<h2>Gallery of NEMS lab</h2>
 				<div class="w3-row-padding">
-					{% for photo in photos %}
+					{% for photo in gallery %}
 						{% include 'components/photo.html' %}
 					{% endfor%}	    
 				</div>
