--- a/nems/templates/demo.html
+++ b/nems/templates/demo.html
@@ -21,7 +21,9 @@
 				<h3>Integrated WiGig/WiFi Networked System</h3>
 				<div class="w3-row-padding" >
 			    <div class="w3-col l3 m4">
-			      <div class="demodesc">To be released ...</div>
+			      <div class="demodesc">
+			      	<iframe width="560" height="315" src="https://www.youtube.com/embed/cJXe5Fi9_78" frameborder="0" allowfullscreen></iframe>
+			      </div>
 			    </div>
 				</div>
 			</div>
